Fix some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html {
   font-family: Georgia, serif;
   line-height: 1.5;
   background-color: #f2f1ed;
+  margin: 1rem;
 }
 
 *,
@@ -13,10 +14,11 @@ html {
 
 body {
   margin: 0;
+  display: grid;
   grid-template-areas:
-  "header header"
-  "main main";
-gap: 1rem;
+    "header header"
+    "main main";
+  gap: 1rem;
 }
 
 img {
@@ -25,6 +27,7 @@ img {
 
 header {
   /* Remove the <header> box and allow us to directly apply header’s children to the grid. */
+  display: contents;
   display: grid;
   grid-area: header;
   grid-template-columns: 1fr 1fr;
@@ -36,6 +39,8 @@ header {
   grid-column: 1;
   grid-row: 2;
   z-index: 1;
+  align-self: end;
+  margin: 1rem;
 }
 
 .pano {
@@ -58,7 +63,7 @@ nav ul {
 }
 
 nav a {
-  font-family: "Patua One",  sans-serif;
+  font-family: "Patua One", sans-serif;
   font-size: 2rem;
   color: #fff;
 }
@@ -66,6 +71,18 @@ nav a {
 main {
   display: flex;
   grid-area: main;
+}
+
+figure {
+  margin: 0;
+}
+
+figure:nth-child(1) {
+  margin: 0 .5rem 0 0;
+}
+
+figure:nth-child(2) {
+  margin: 0 0 0 .5rem;
 }
 
 h2 {
